--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -53,7 +53,7 @@ h1.title {
 .score-container, .best-container {
   position: relative;
   display: inline-block;
-  background: #ffada0;
+  background: #edc22e;
   padding: 15px 25px;
   font-size: 25px;
   height: 25px;
